<resources>
    <string name="app_name">World Cinema</string>
    <string name="signin_signin_btn">Войти</string>
    <string name="signin_register_btn">Регистрация</string>
    <string name="form_email">E-mail</string>
    <string name="form_password">Пароль</string>
    <string name="form_name">Имя</string>
    <string name="form_surname">Фамилия</string>
    <string name="form_repeat_password">Повторите пароль</string>
    <string name="signup_signup_btn">Зарегистрироваться</string>
    <string name="signup_has_account_btn">У меня уже есть аккаунт</string>
    <string name="no_email">Введите E-mail</string>
    <string name="no_password">Введите пароль</string>
    <string name="email_requirements">E-mail должен содержать символ @ и состоять только из строчных букв</string>
    <string name="not_filled">Все поля обязательны для заполнения</string>
    <string name="passwords_not_equal">Пароли должны совпадать</string>
    <string name="left_bar_one_text">Главное</string>
    <string name="left_bar_two_text">Подборка</string>
    <string name="left_bar_three_text">Коллекции</string>
    <string name="last_view">Вы смотрели</string>
    <string name="top_bar_one_text">Обсуждения</string>
    <string name="top_bar_two_text">История</string>
    <string name="top_bar_three_text">Настройки</string>
    <string name="mainscr_name">Владимир Путин</string>
    <string name="mainscr_email">frickusa@mail.ru</string>
    <string name="mainscr_exit_btn">Выход</string>
</resources>