<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainScreen">


    <RelativeLayout
        android:id="@+id/mainscr_top_bar"
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:layout_alignParentTop="true"
        android:background="@color/bars">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="129sp"
            android:fontFamily="@font/roboto"
            android:text="@string/last_view"
            android:textColor="@color/secondary"
            android:textFontWeight="700"
            android:textSize="24sp" />

        <RelativeLayout
            android:id="@+id/options"
            android:layout_width="187sp"
            android:layout_height="132sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="624sp">

            <ImageView
                android:id="@+id/top_bar_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18sp"
                android:layout_marginTop="12sp"
                app:srcCompat="@drawable/top_bar_one" />

            <TextView
                android:id="@+id/top_bar_one_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/top_bar_one"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="12sp"
                android:fontFamily="@font/roboto"
                android:text="@string/top_bar_one_text"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/top_bar_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18sp"
                app:srcCompat="@drawable/top_bar_two" />

            <TextView
                android:id="@+id/top_bar_two_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/top_bar_two"
                android:layout_marginLeft="16sp"
                android:fontFamily="@font/roboto"
                android:text="@string/top_bar_two_text"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/top_bar_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="18sp"
                android:layout_marginBottom="12sp"
                app:srcCompat="@drawable/top_bar_three" />

            <TextView
                android:id="@+id/top_bar_three_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/top_bar_three"
                android:layout_marginLeft="16sp"
                android:layout_marginBottom="12sp"
                android:fontFamily="@font/roboto"
                android:text="@string/top_bar_three_text"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="14sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88sp"
            android:layout_toRightOf="@id/options"
            android:layout_centerVertical="true"
            android:layout_marginLeft="82sp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="88sp"
                android:layout_height="88sp"
                android:src="@drawable/signin_logo" />

            <TextView
                android:id="@+id/mainscr_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_image"
                android:layout_marginLeft="62sp"
                android:layout_marginTop="18sp"
                android:fontFamily="@font/roboto"
                android:text="@string/mainscr_name"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mainscr_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/profile_image"
                android:layout_marginLeft="62sp"
                android:layout_marginBottom="18sp"
                android:fontFamily="@font/roboto"
                android:text="@string/mainscr_email"
                android:textColor="@color/accent"
                android:textFontWeight="400"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainscr_left_bar"
        android:layout_width="110sp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="@color/bars"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/left_bar_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="63sp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/left_bar_one" />

        <TextView
            android:id="@+id/left_bar_one_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/left_bar_one"
            android:layout_centerHorizontal="true"
            android:textColor="@color/secondary"
            android:fontFamily="@font/roboto"
            android:textFontWeight="500"
            android:textSize="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/left_bar_one_text" />

        <ImageView
            android:id="@+id/left_bar_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/left_bar_one_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38sp"
            app:srcCompat="@drawable/left_bar_two" />

        <TextView
            android:id="@+id/left_bar_two_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/left_bar_two"
            android:layout_centerHorizontal="true"
            android:textColor="@color/bars_elem"
            android:fontFamily="@font/roboto"
            android:textFontWeight="500"
            android:textSize="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/left_bar_two_text" />

        <ImageView
            android:id="@+id/left_bar_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/left_bar_two_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38sp"
            app:srcCompat="@drawable/left_bar_three" />

        <TextView
            android:id="@+id/left_bar_three_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/left_bar_three"
            android:layout_centerHorizontal="true"
            android:textColor="@color/bars_elem"
            android:fontFamily="@font/roboto"
            android:textFontWeight="500"
            android:textSize="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/left_bar_three_text" />
    </RelativeLayout>

    <ImageView
        android:layout_width="631sp"
        android:layout_height="match_parent"
        android:layout_below="@+id/mainscr_top_bar"
        android:layout_toRightOf="@id/mainscr_left_bar"
        android:src="@drawable/signin_logo"/>

</RelativeLayout>